# Dye-Gradient-to-CSV

./: .gitignore  CMakeLists.txt  LICENSE  README.txt  settings.json
cpp/: CMakeLists.txt  main.cpp  resources.rc
matlab/: DyeProfileToSolventFrontDistance.m  DyeProfileToWaterfall.m  dMdT.m
